--- a/_includes/filosofia.html
+++ b/_includes/filosofia.html
@@ -1,15 +1,61 @@
     <!-- Filosofia Section -->
-    <section id="filosofia" class="content-section text-center no-padding">
+    <section id="filosofia" class="content-section no-padding">
         <div class="filosofia-section">
             <div class="purple-bg">
-                <div class="container">
+                <div class="container text-center">
                     <div class="row">
                         <div class="col-lg-8 col-lg-offset-2">
-                            <h2>Filosofia d'<span class="light">Jordi</span>Pagès</h2>
-                            <p>#Jordi Pagès és un espai de col·laboració que funciona com a suport perquè artistes, dissenyadors, il·lustradors i marques tinguin el seu propi punt de exposició, promoció i venta temporal. A #Jordi Pagès creiem en valors com el disseny, la creativitat, la innovació i la sostenibilitat i volem compartir-los a través del nostre projecte.</p>
-                            <p>Un projecte que neix de la col.laboració de Sid Publicitat i Artipocket, formant un equip multidisciplinari amb una dilatada experiència en  disseny, comunicació, màrqueting i gestió cultural.</p>
+                            <h2>Trajectòria de <span class="light">Jordi</span>Pagès</h2>
+                            <p>La seva primera exposició va ser l'any 1979 a la sala Exposicions Caixa Sabadell de Granollers. Sota el títol d' “Inici” era una col·lectiva amb Jordi Benito. Durant tots aquests anys Jordi Pagès s'ha caracteritzat per exposar fora dels àmbits corrents del món de l'art. Biblioteques, llibreries, sales culturals, universitats, hotels, s'han omplert dels seus personalíssims collages, a mig camí entre l'art i la poesia, d'aquí que no ens hem d'estranyar que opti per aquests llocs culturals, on se sent molt més còmode que no en les institucions artístiques més acadèmiques de l'art. Al llarg de la seva trajectòria ha mostrat el seu art en multituds d'exposicions arreu del territori nacional (Barcelona, Cadaqués, Igualada, Girona, Granollers, entre molts d'altres), però també de l'internacional (Belfast (Irlanda), Céret (França), etc.).</p>
                         </div>
                     </div>
+                </div>
+                <div class="container">
+                    
+                    <h3>Darreres exposicions</h3>
+                    
+                    <h4>2015</h4>
+                    
+                    <p>29/01/2015 <strong>TINTA INVISIBLE</strong> Edicions [galeria d'art], Carrer Lleó, 5 Barcelona. Inaguració 29 de gener a les 19:00 >fins 25 febrer 2015. Collage(s) sobre fotografies de TONI CUMELLA. Sèrie inspirada en la poesia d'AGUSTÍ BARTRA, El gos geomètric > presentació per Vicenç Altaió i lectura del poema per Nú Miret.</p>
+                    
+                    <h4>2014</h4> 
+
+                    <p>3/12/2014>12/01/2015 <strong>GALERIA ARTÈRIA</strong> d'Igualada presenta Artèria col·lectiva amb els artistes_Marta Pruna_Marta Ballvé_Jordi Pagès_Lourdes Figuera_Lourdes Fisa_David Ymbernon_Teresa Riba_Pilar Alvarez_Roser Oduber_Jaume de Córdoba.</p>
+
+                    <p>6/11/2014>30/11/2014 EXPOSICIÓ_fragment quadre obra de JORDI PAGÈS_inspirada en un poema de Wallace Stevens_tot som un tot_[acrílic i llapis d'oli sobre tela].</p>
+
+                    <p>Durant el mes de novembre la Casa de Cultura de la Diputació de Girona,  Girona acollirà la reinterpretació lliure del quadre Onze de setembre d'Antoni Estruch dividit en 50 fragments pintats pels artistes contemporanis més destacats del panorama català.</p>
+
+                    <p>20-31 octubre 2014 Sala Cultural de l'Ajuntament de Caldes d'Estrach> VISIÓ FRAGMENTADA DEL QUADRE ONZE DE SETEMBRE DE 1714 D'Antoni Estruch.</p>  
+
+                    <p>Artistes participants_Pep Quer Nobuko Kihira Joan Laborda Javi Aznarez Ramon Moscardó Koyama Jordi Mitjà Arranz Bravo Ilich Fbe G. Carbó Berthold Niebla Jordi Pagès Regina Saura Jordi Abelló Pep Camps Didier Lourenço Josep Moscardó Raimon Sunyer Xevi Sola Serra Clara Oliveres Pau Baena></p>
+
+                    <p>2-15 octubre 2014 Biblioteca Casa de Cultura Joan Ruiz i Calonja. Santa Eulàlia de Ronçana. Pintures i Collage(s) Sèrie Tot és ara i res. A Joan Vinyoli. >Inauguració 1 d'octubre 2014>14 octubre. Dia 10 d'octubre> Lectura de poemes a càrrec de Santi Montagud i Esteve Plantada. Versió recitada i cantada per Jaume Arnella.</p>
+
+                    <p>22-30 d'agost 2014 GALERIA  CADAQUÉS  ESPAI  DOS  Horta d'en Sanés, 9 Cadaqués. Collage(s) i Gravats. Cala Far de Nans. Sèrie inspirada en la poesia de Michel Houellebecq. Sobre fotografies de Valérie Prot. Inauguració 22 d'agost. 27/08 lectura de poemes a la mateixa galeria de poemes de M. Houellebecq per Gabriel Ventura, Jordi Carulla i Edgar Gallart i música de Mike Taylor.</p>
+
+                    <p>9-10 d'agost 2014 EX ABRUPTO MOIÀ Exposició Pintures i Collage(s) Sèrie Tot és ara i res. A Joan Vinyoli. Lectura de poemes a càrrec de Guim Valls, Jordi Carulla, Enric Casasses i Gabriel Ventura> Acció del col·lectiu Ex Abrupto. Dos dies de propostes artístiques interdisciplinars per les quals, s'activarà un edifici històric del poble, que actualment es troba en desús, la Fonda la Masia i la plaça contigua, on durant la Guerra Civil hi va ser cremada i destruïda l'església de Sant Sebastià. Ex Abrupto Moià és una proposta artística pensada exclusivament perquè sigui exhibida i recreada a la Fonda la Masia i pel poble de Moià, parteix de les pròpies oportunitats que ofereix el poble, en quant a creatius emergents, institucions culturals i s'hi afegeixen les propostes de creadors contemporanis nacionals i internacionals.</p>
+
+                    <p>El Taller de Tabakov, Riba Pitxot, 2  Cadaqués. Pintura i Collage(s) POETESfERITS sèrie inspirada en la poesía de Guim Valls, Dan Rimdyl, Anna Vilà, Santi Montagud, Albert Forns, Cristina Fernández Recasens i Esteve Plantada. Inauguració_dissabte_ 26 de juliol_a les 8 del vespre_ Fins 27 de juliol 2014. Presentació a càrrec d'Eudald Camps. Lectura de poemes per Guim Valls_Anna Vilà_Dan Rimdyl_Vicenç Altaió_Zoë Valls_Albert Serra_Santi Montagud_Marc O'Callaghan.</p> 
+
+                    <p>Llibreria Calders, Passatge Pere Calders, 9 Barcelona. Pintures i Collage(s) Tot és ara i res. A Joan Vinyoli_1juny>22juny 2014_Lectura de poemes de Joan Vinyoli a càrrec d'Enric Casasses _Presentació Manel Clot_Inauguració_diumenge_1 de juny a les 7 de la tarda.</p>
+
+                    <p>Anònims, menjars i pensars, [galeria d'art i llibreria] carrer Ricomà, 57 Granollers.  Pintura i Collage(s) POETESfERITS sèrie inspirada en la poesía de Guim Valls, Dan Rimdyl, Anna Vilà, Santi Montagud, Albert Forns i Esteve Plantada._Poeta convidat Gabriel Ventura_Pietat Sanjuan llegirà textos de Vacca._ Inauguració 22 de maig. Fins  12 de juny 2014_Presentació a càrrec    de Pruden Panadés i Manel Clot.</p>
+
+                    <p>Palau Zuriaga carrer Sant Pere Més Baix, 16 Barcelona. Pintura i Collage(s) POETESfERITS sèrie inspirada en la poesía de Guim Valls, Dan Rimdyl, Anna Vilà, Santi Montagud, Albert Forns, Cristina Fernández Recasens_  Inauguració 23 d'abril > 30 abril 2014.</p>
+
+                    <p>Presentació llibre POETESfERITS a càrrec de Manel Clot, Pruden Panadès i Vicenç Altaió.</p>
+
+                    <p>Poeta convidat David Caño. Performance d'Adrián Pino.</p>
+
+                    <p>Societat L'Amistat. Casino. Cadaqués. Col.lectiva 150 artistes >Els artistes amb l'educació< 12 d'abril fins el 10 de maig 2014. >artistes participants Nicolás Stoppa, Sebastian Skira, Salvador Dali,  Jordi Valls, Gemma Pichot, Javi Aznarez, Lanfranco Bombelli, Daniel Zerbst, Joan Vehí, Jordi Pagès, Wolfgang Berus, Richard Hamilton, Josep Niebla, Marcel Duchamp, Catherine Perrot, Albert Ràfols-Casamada, Eduard Arranz-Bravo, Núria Duran, Catherine Rey, Matilde Obradors,  Antoni Pichot, Francesc Català-Roca, Pere Bellés, Lali Bas Dalí,  Joan-Josep Tharrats,  Fabienne Baradat, Anna Vall, Marta Vignau, Maggie Williams, Marc Rotllan,...</p>
+
+                    <p>Context Llibreria Cafè, [llibreria  i galería d'art]carrer Pou Rodó, 21 Girona_ Pintura i Collage(s) POETESfERITS sèrie inspirada en la poesía de Guim Valls, Dan Rimdyl, Anna Vilà, Santi Montagud, Albert Forns , Esteve Plantada i Cristina Fernández Recasens.  Inauguració 7 de març. Fins 31 de març 2014. Presentació a càrrec d'Eudald Camps.</p>
+
+                    <p>La Nau Comanegra, carrer Consell de Cent, 159 . Barcelona  Pintura i Collage(s) POETESfERITS sèrie inspirada en la poesía de Guim Valls, Dan Rimdyl, Anna Vilà, Santi Montagud, Albert Forns i Esteve Plantada. Inauguració 21 gener. Fins 31 de gener 2014.</p>
+
+                    <p>Presentació a càrrec de Pruden Panadés.</p>
+                    
                 </div>
             </div>
         </div>
