Refent la secció porfoli a partir dels posts per donaf produnditat al site.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,12 +10,8 @@
 
           <h2>Un projecte de</h2>
           
-          <div class="col-sm-6 col-lg-6">
+          <div class="col-lg-8 col-lg-offset-2">
               <a href="{{ site.organitza.artinpocket.url }}"><img src="/images/{{ site.organitza.artinpocket.logo }}" alt="{{ site.organitza.artinpocket.description }}" title="{{ site.organitza.artinpocket.description }}"></a>
-          </div>
-              
-          <div class="col-sm-6 col-lg-6">
-              <a href="{{ site.organitza.sidpublicitat.url }}"><img src="/images/{{ site.organitza.sidpublicitat.logo }}" alt="{{ site.organitza.sidpublicitat.description }}" title="{{ site.organitza.sidpublicitat.description }}"></a>
           </div>
 
         </div>
