--- a/styles/main.scss
+++ b/styles/main.scss
@@ -599,7 +599,7 @@ figure img {
 .related {
   padding-top: 2rem;
   padding-bottom: 2rem;
-  border-top: 1px dashed #000000;
+  border-top: 2px dashed #ffffff;
 }
 .related-posts {
   padding-left: 0;
@@ -623,7 +623,7 @@ figure img {
 .footer-section {
     width: 100%;
     color: #fff;
-    background: url(/images/jordi-pages-equip-vista-lateral-esquerra.jpg) no-repeat center center scroll;
+    background: url(/images/jordi-pages-exposicio-joan-vinyoli-santa-eulalia.jpg) no-repeat center center scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
