Ajustades la metadada theme-color.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -27,7 +27,7 @@
     <meta name="mobile-web-app-capable" content="yes">
     <link rel="icon" sizes="192x192" href="/images/touch/chrome-touch-icon-192x192.png">
 
-    <meta name="theme-color" content="#e5007e">
+    <meta name="theme-color" content="#001572">
 
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
