Refeta la secció obres per a tenir màxima profunditat del sites.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -30,7 +30,7 @@
                         <a class="page-scroll" href="#download">Download</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfoli">Portfoli</a>
+                        <a class="page-scroll" href="#portfoli">Obres</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contacte</a>
