--- a/_layouts/default-post.html
+++ b/_layouts/default-post.html
@@ -7,7 +7,7 @@ layout: compress
 
 {% include head.html %}
 
-<body unresolved id="page-top" data-spy="scroll" data-target=".navbar-fixed-top" {% if page.class == 'artwork' %}class="artwork"{% endif %}>
+<body unresolved id="page-top" data-spy="scroll" data-target=".navbar-fixed-top" {% if page.class == 'artwork' %}class="artwork"{% endif %} {% if page.category == 'mur-diari' %}class="mur-diari"{% endif %}>
 
     {% include header-post.html %}
     <section id="portfoli" class="content-section text-center purple-bg__full">
