--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -43,7 +43,7 @@ layout: default-post
 </div>
 
 <div class="related">
-  <h2>También te puede interesar</h2>
+  <h2>També et post interessar</h2>
   <ul class="related-posts">
     {% for post in site.related_posts limit:3 %}
       <li>
